--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "globals": "^15.12.0",
     "prettier": "^3.3.3",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.2",
     "typescript-eslint": "^8.15.0"
   },
   "dependencies": {
+    "config": "^3.3.12",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
